small layout spacing fix

--- a/web/cobrands/fixmybarangay/message_manager.scss
+++ b/web/cobrands/fixmybarangay/message_manager.scss
@@ -100,7 +100,7 @@ $color_bg_reply_6:       #B8B8B8;
 					color: white;
 					text-align: center;
 					position: absolute;
-					top: 0;
+					top: 4px;
 					&:hover { background-color: black;}
 				}
 				.mm-hide {
@@ -117,6 +117,9 @@ $color_bg_reply_6:       #B8B8B8;
 	p.mm-empty {
 		margin: 1em;
 	}
+}
+#add_support { /* COPY TO UPDATE button */
+	margin: 1em;
 }
 #reply-form-container {
   #reply-form{
